--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Java Script</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/core.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/core.css">
 </head>
 <body>
 
@@ -19,10 +19,13 @@
                 </a>
                 <ul class="menu">
                     <li class="menu_link">
-                        <a href="pages/home_works.html">Home Works</a>
+                        <a href="./pages/home_works.html">Home Works</a>
                     </li>
                     <li class="menu_link">
-                        <a href="pages/lessons.html">Lessons</a>
+                        <a href="./pages/lessons.html">Lessons</a>
+                    </li>
+                    <li class="menu_link">
+                        <a href="./pages/card.html">Card</a>
                     </li>
                     <li class="menu_link">
                         <a href="https://t.me/baked_toastt" target="_blank">Send message</a>
