--- a/pages/card.html
+++ b/pages/card.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Monster</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/core.css">
-    <link rel="stylesheet" href="../css/monster.css">
+    <link rel="stylesheet" href="../css/card.css">
 </head>
 <body>
-<div class="wrapper">
-    <div class="header">
+      <div class="header">
         <div class="container">
             <div class="inner_header">
                 <a href="../index.html">
                     <div class="logotype">
-                        <h2>Java<span>Script</span></h2>
+                        <h2>JavaScript</h2>
                     </div>
                 </a>
                 <ul class="menu">
@@ -25,7 +25,7 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href=".//pages/card.html">Card</a>
+                        <a href="../pages/card.html">Card</a>
                     </li>
                     <li class="menu_link">
                         <a href="https://t.me/baked_toastt" target="_blank">Send message</a>
@@ -35,28 +35,54 @@
             </div>
         </div>
     </div>
-</div>
-<canvas id="canvas"></canvas>
 
-<div class="modal">
+    <div class="container">
+        <div id="cards" class="cards"></div>
+    </div>
+
+
+    <div class="footer">
+            <div class="container">
+                <a href="https://www.instagram.com/baked_toastt/" target="_blank">
+                    <div class="inner_footer">
+                        <h2>Made by Somebody</h2>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal">
     <div class="modal_dialog">
         <div class="modal_content">
             <form action="#">
-                <div class="modal_close">&times;</div>
+                <div class="modal_close">&#10006;</div>
                 <div class="modal_title">Мы свяжемся с вами как можно быстрее!</div>
                 <label>
-                    <input required placeholder="Ваше имя" name="name" type="text" class="modal_input">
+                    <input
+                        required
+                        placeholder="Ваше имя"
+                        name="name"
+                        type="text"
+                        class="modal_input"
+                    >
                 </label>
                 <label>
-                    <input required placeholder="Ваш номер телефона" name="phone" class="modal_input">
+                    <input
+                        required
+                        placeholder="Ваш номер телефона"
+                        name="phone"
+                        type="text"
+                        class="modal_input"
+                    >
                 </label>
                 <button class="btn btn_dark btn_min">Перезвонить мне</button>
             </form>
         </div>
     </div>
 </div>
-
 </body>
-<script src="../js/monster.js"></script>
+<script src="../js/main.js"></script>
 <script src="../js/modal.js"></script>
+<script src="../js/card.js"></script>
 </html>
