--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -26,6 +26,9 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
+                        <a href="../pages/card.html">Card</a>
+                    </li>
+                    <li class="menu_link">
                         <a href="https://t.me/baked_toastt" target="_blank">Send message</a>
                     </li>
                 </ul>
