--- a/pages/monster.html
+++ b/pages/monster.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="header">
+  <div class="header">
         <div class="container">
             <div class="inner_header">
                 <a href="../index.html">
@@ -25,7 +25,7 @@
                         <a href="../pages/lessons.html">Lessons</a>
                     </li>
                     <li class="menu_link">
-                        <a href=".//pages/card.html">Card</a>
+                        <a href="../pages/card.html">Card</a>
                     </li>
                     <li class="menu_link">
                         <a href="https://t.me/baked_toastt" target="_blank">Send message</a>
